# tg_admin

./: .gitignore  LICENSE  README.md
tg_admin/: Makefile  docker-compose.yaml  pyproject.toml
tg_admin/tg_admin/: config_template.py  main.py  old_main.py
tg_admin/tg_admin/db/: __init__.py  add_message.py  add_user.py  delete_message.py  delete_user.py  get_user.py  get_user_messages.py  init.sql
tg_admin/tg_admin/dto/: ChannelStat.py  Chat.py  Message.py  User.py  UserState.py  __init__.py
tg_admin/tg_admin/handlers/: __init__.py  content.py  help.py  post.py  regular.py  set_chat.py  start.py  stat.py  trash.py
